--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<link rel="stylesheet" href="css/style.css" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sports Executives</title>
+  <style>
+    /* Inline CSS so there's no path confusion */
+    * { box-sizing: border-box; }
+    body { margin: 0; font-family: Arial, Helvetica, sans-serif; color: #1f2937; background: #f5f7fb; line-height: 1.6; }
+    header { background: #111827; color: #fff; padding: 48px 20px; text-align: center; }
+    header h1 { margin: 0 0 8px; font-size: 40px; }
+    header p { margin: 0; opacity: .85; }
+    main { max-width: 900px; padding: 32px 20px 100px; margin: 0 auto; }
+    section { background: #fff; border-radius: 16px; padding: 24px; margin-bottom: 20px; box-shadow: 0 6px 18px rgba(17,24,39,.08); }
+    section h2 { margin: 0 0 8px; font-size: 22px; color: #0f172a; }
+    footer { position: fixed; left: 0; right: 0; bottom: 0; background: #111827; color: #e5e7eb; text-align: center; padding: 12px; font-size: 14px; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Sports Executives</h1>
+    <p>Game insights & information for smarter betting.</p>
+  </header>
+  <main>
+    <section>
+      <h2>About Us</h2>
+      <p>We provide data-driven insights to help clients make informed betting decisions.</p>
+    </section>
+    <section>
+      <h2>Contact</h2>
+      <p><a href="mailto:info@sportsexecutives.ai">info@sportsexecutives.ai</a></p>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 Sports Executives</p>
+  </footer>
+</body>
+</html>
