--- a/index.html
+++ b/index.html
@@ -1,43 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sports Executives — Game Intelligence</title>
-  <meta name="description" content="Sports Executives delivers clean, actionable game intelligence for sharper decisions." />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Sports Executives — Test</title>
   <style>
-    /* Red Sox palette: Red Sox Red #BD3039, Midnight Navy #0C2340, white */
-    :root{
-      --bg:#0C2340;           /* Midnight Navy */
-      --card:#102846;         /* slightly lighter navy for cards */
-      --muted:#b8c4d6;        /* soft cool gray/blue text */
-      --text:#f3f6fb;         /* near-white */
-      --brand:#BD3039;        /* Red Sox Red */
-      --brand-2:#0C2340;      /* Midnight Navy */
-      --shadow:0 10px 30px rgba(2,6,23,.45);
-    }
-    *{box-sizing:border-box}
-    html,body{
-      margin:0; padding:0; font-family:ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
-      color:var(--text);
-      background:
-        radial-gradient(1200px 600px at 10% -10%, rgba(189,48,57,.20), transparent),
-        radial-gradient(1000px 500px at 90% -20%, rgba(12,35,64,.25), transparent),
-        var(--bg);
-    }
-    a{color:inherit; text-decoration:none}
-    .container{max-width:1100px; margin:0 auto; padding:0 20px}
-
-    /* Nav */
-    .nav{position:sticky; top:0; z-index:50; backdrop-filter: blur(8px); background:rgba(12,35,64,.78); border-bottom:1px solid rgba(255,255,255,.08)}
-    .nav-inner{display:flex; align-items:center; justify-content:space-between; height:64px}
-    .logo{display:flex; gap:10px; align-items:center; font-weight:700; letter-spacing:.5px}
-    .logo-mark{width:28px; height:28px; border-radius:8px; background:linear-gradient(135deg, var(--brand), var(--brand-2)); box-shadow:var(--shadow)}
-    .nav-cta{display:flex; gap:10px}
-    .btn{display:inline-block; padding:10px 16px; border-radius:12px; font-weight:600; border:1px solid rgba(255,255,255,.15)}
-    .btn.primary{background:linear-gradient(135deg, var(--brand), var(--brand-2)); color:#ffffff; border:none}
-    .btn.ghost{background:transparent; color:var(--text)}
-
-    /* Hero */
-    .hero{padding:64px 0 24px}
-    .hero-grid{dis
+    body{margin:0;background:#0C2340;color:#fff;font-family:Arial;padding:24px}
+    .box{background:#BD3039;padding:16px;border-radius:12px;margin-top:12px}
+  </style>
+</head>
+<body>
+  <h1>It works 🎉</h1>
+  <p>If you can read this, the site is deploying correctly.</p>
+  <div class="box">Red Sox colors loaded.</div>
+</body>
+</html>
