--- a/index.html
+++ b/index.html
@@ -204,5 +204,6 @@
       © 2025 Sports Executives • info@sportsexecutives.ai
     </div>
   </footer>
+<img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Soccerball.svg" style="position:fixed; top:10px; right:10px; width:50px;" />
 </body>
 </html>
