--- a/index.html
+++ b/index.html
@@ -204,6 +204,6 @@
       © 2025 Sports Executives • info@sportsexecutives.ai
     </div>
   </footer>
-<img src="balls1.png" style="position:fixed; top:10px; right:10px; width:50px;" />
+<img src="/balls1.png" style="position:fixed; top:10px; right:10px; width:50px;" />
 </body>
 </html>
