--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
       © 2025 Sports Executives • info@sportsexecutives.ai
     </div>
   </footer>
-<img src="/balls1.png" style="position:fixed; top:10px; right:10px; width:200px; z-index:9999;" />
+THIS IS A TEST
+  <img src="/balls1.png" style="position:fixed; top:10px; right:10px; width:200px; z-index:9999;" />
 </body>
 </html>
